--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "pro-gallery": "^4.1.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
+    "react-dimmer": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-medium-image-zoom": "^4.4.3",
     "react-photo-album": "^1.14.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
